force-app/main/default/objects/Public_Engagement__c/Public_Engagement__c.object-meta.xml
<CustomObject>
    <label>Public Engagement</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>PE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>