force-app/main/default/objects/Public_Engagement__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Public engagement date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>