force-app/main/default/objects/Public_Engagement__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Public Engagements</relationshipLabel>
    <relationshipName>Public_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>