force-app/main/default/objects/Public_Engagement__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Surgeon role in public engagement</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>