force-app/main/default/objects/Public_Engagement__c/fields/Surgeon_del__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Surgeon related to public engagement</description>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Public Engagements</relationshipLabel>
    <relationshipName>Public_Engagements_del1</relationshipName>
    <type>Lookup</type>
</CustomField>