force-app/main/default/objects/Public_Engagement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Public engagement type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>